apps/bitwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitwarden
        app.kubernetes.io/name: bitwarden
    spec:
      securityContext:
        fsGroup: 33
        runAsUser: 33
        runAsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 3012
              name: websocket
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: "5m"
              memory: "40Mi"
            limits:
              memory: "64Mi"
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      volumes: []
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
