apps/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
    app.kubernetes.io/name: bitwarden
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "bitwarden.ganam.app"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: websocket
      port: 3012
      targetPort: 3012
      protocol: TCP
  selector:
    app: bitwarden
