apps/bitwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - bitwarden.ganam.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /notifications/hub
      backendRefs:
        - group: ""
          kind: Service
          name: bitwarden
          port: 3012
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bitwarden
          port: 80
